data/derived/comb/progs/unify/prog1435.ml.out
Characters 32-40:
  let stringOfList f l = failwith List.map (fun x-> sepConcat "" x) l;;
                                  ^^^^^^^^
Error: This expression has type ('a -> 'b) -> 'a list -> 'b list
       but an expression was expected of type string
